# naas-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: .releaserc  environment.yaml  package-lock.json  package.json
.github/hooks/: pre-commit
.github/workflows/: docker-build-pre-release.yml  docker-build-release.yml  pytest.yml
naas_python/: __init__.py  authorization.py  cli.py  main.py  utils.py
naas_python/domains/: authorization.py
naas_python/domains/asset/: AssetDomain.py  AssetSchema.py
naas_python/domains/asset/adaptors/primary/: SDKAssetAdaptor.py  TyperAssetAdaptor.py
naas_python/domains/asset/adaptors/secondary/: NaasAssetAPIAdaptor.py
naas_python/domains/asset/handlers/: CLIAssetHandler.py  PythonHandler.py
naas_python/domains/asset/models/: Asset.py  __init__.py
naas_python/domains/registry/: RegistryDomain.py  RegistrySchema.py
naas_python/domains/registry/adaptors/primary/: SDKRegistryAdaptor.py  TyperRegistryAdaptor.py
naas_python/domains/registry/adaptors/secondary/: NaasRegistryAPIAdaptor.py
naas_python/domains/registry/handlers/: CLIRegistryHandler.py  PythonHandler.py
naas_python/domains/secret/: SecretDomain.py  SecretSchema.py
naas_python/domains/secret/adaptors/primary/: SDKSecretAdaptor.py  TyperSecretAdaptor.py  utils.py
naas_python/domains/secret/handlers/: CLISecretHandler.py  PythonHandler.py
naas_python/domains/secret/models/: Secret.py  __init__.py
naas_python/domains/space/: SpaceDomain.py  SpaceSchema.py
naas_python/domains/space/handlers/: CLISpaceAdaptor.py  CLISpaceHandler.py  PythonHandler.py
naas_python/domains/space/types/: docker.py
naas_python/domains/storage/: StorageDomain.py  StorageSchema.py
naas_python/domains/storage/handlers/: CLIStorageHandler.py  PythonHandler.py
naas_python/domains/storage/models/: Storage.py  __init__.py
naas_python/utils/: cicd.py  exceptions.py  log.py  workflow_template.j2
naas_python/utils/cicd/: github.py
naas_python/utils/domains_base/: authorization.py
naas_python/utils/domains_base/secondary/: BaseAPIAdaptor.py
tests/: test_authorization_cli.py  test_authorization_sdk.py  test_lib.py
tests/unitests/: test_cli_with_mock_domain.py
(+10 files in other folders)
